--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,93 @@ body{
     flex-direction: column;
 
     min-width: 500px;
-    max-width: 600px;
+    max-width: 1000px;
 
     margin: 200px auto;
 
-
+    padding: 50px;
 }
 
 .mainContainerStyle{
     border: 1px solid black;
     background-color: #047670;
+    color: white;
+}
+
+.mainContainer > form > div{
+    width: 100%;
+    /*display: inline-block;*/
+    box-sizing: border-box;
+    padding: 5px;
+}
+
+#inputMessage{
+    width: 400px;
+    height: 200px;
+}
+
+form > hr{
+    width: 100%;
+}
+
+.mainContainer > form{
+    /*
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+
+    flex-direction: column;
+*/
+    width: 100%;
+}
+
+form > div{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+/*form > div > span > input{
+    width: 100%;
+}*/
+
+input + input{
+    margin-left: 5px;
+}
+
+.inputs{
+    flex-basis: max-content;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.inputs > input{
+    flex-basis: auto;
+    flex-grow: 1;
+
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.inputs > textarea{
+    flex-basis: auto;
+    flex-grow: 1;
+}
+
+
+.lables{
+    /*flex-basis: 150px;*/
+    min-width: 150px;
+}
+
+.mainContainer > span{
+    flex-basis: auto;
+    flex-grow: 1;
+
+    width: 100%;
 }
